【HTML_Learning】 提交后续阶段学习进程(菜单导航栏、局部页面更新、AJAX技术、文件上传、弹窗输入等)。

--- a/Practice1/index.html
+++ b/Practice1/index.html
@@ -68,15 +68,20 @@
     <meta property="og:description" content="本示例页面展示网页元数据的用法。">
     <meta property="og:title" content="MDN页面 - HTML &lt;head&gt; 元素中的元数据">
 
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
 </head>
 
 <body>
-    <!--
+    <!-- 1. <body>
         这个元素包含了访问页面时所有显示在页面上的内容，文本，图片，音频，游戏等等.
     -->
+
+    <!-- 2.基础：标题和段落
+        这里有六个标题元素标签 —— <h1>、<h2>、<h3>、<h4>、<h5>、<h6>;
+        而每个段落通常用元素<p>表示.
+     -->
     <h1>元数据示例</h1>
 
     <p>藏语示例：བཀྲ་ཤིས་བདེ་ལེགས།</p>
